codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__smart_compact_preview.snap
---
source: tui/src/chatwidget/tests/shake_preview_tests.rs
assertion_line: 59
expression: "render_bottom_popup(&chat, 90)"
---
  Shake preview (smartCompact)
  Estimated conversation: 118,000 → 71,000 tokens. Frees ~47,000 (40%).
  24 tool outputs and 8 text blocks. Recent ~4k tokens stay protected; removed text is
  recoverable. Mechanical Elide runs first. Eligible OpenAI Astra sessions then ask Luna
  for an explicit bounded handoff; other models keep the mechanical Elide checkpoint
  only.

  Idle age unavailable; cache state unknown.
  Full-request estimate unavailable; conversation counts alone cannot establish pricing
  or compact headroom.
  Favor shake when it delays compaction, not simply before /compact.

  Conversation excludes instructions/tools. Costs exclude recovery and output; not plan-
  allowance predictions.

› 1. Shake
  2. Cancel

  Press enter to confirm or esc to go back
