codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_waiting_multiple_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
Chat:
  Worked for [duration] • [completion time]

Transcript:
• Waited for background terminal · just fix
  Worked for [duration] • [completion time]
